# pidgin-sendscreenshot

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  VERSION  configure.ac
build-aux/: version-gen
config/: Changelog  Makefile.am  blacklist  img_hosting_providers.xml  img_hosting_providers.xml.old.1  img_hosting_providers.xml.old.2
config/tos/: Freeimagehosting.txt  Hellameke.txt  HostingPics.txt  ImageCross.txt  ImageHosting.txt  ImageNerd.txt  ImageShack.txt  Imgur.txt  Megahorst.txt  PictureWizard.txt  PixsUP_(png).txt  TheImghost.txt
config/tos/old/: ImageCloset.txt  PetaIMG.txt  Simpload.txt  TurboImageHost.txt  Warst.txt
m4/: libcurl.m4  purple_custom.m4
po/: AUTHORS  POTFILES.in  de.po  es.po  fr.po  it.po  nl.po  pl.po  ru.po  zh_CN.po
src/: Makefile.am  cues.c  cues.h  dialogs.c  dialogs.h  error.h  ftp_upload.c  ftp_upload.h  http_upload.c  http_upload.h  main.c  main.h  menus.c  menus.h  mswin-freeze.c  mswin-freeze.h  pixbuf_utils.c  pixbuf_utils.h  prefs.c  prefs.h  screencap.c  screencap.h  upload_utils.c  upload_utils.h
