
ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = \
	AUTHORS \
	ChangeLog \
	COPYING \
	INSTALL \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	NEWS \
	README \
	VERSION \
	po/AUTHORS \
	config \
	build-aux

DISTCLEANFILES = \
	sc_config.h \
	intltool-extract \
	intltool-update \
	intltool-merge

SUBDIRS = src po config
