
if ENABLE_UPLOAD

hostsdir = $(PIDGIN_DATADIR)/pidgin_screenshot_data
iconshostsdir = $(PIDGIN_DATADIR)/pidgin_screenshot_data/icons
toshostsdir= $(PIDGIN_DATADIR)/pidgin_screenshot_data/tos

hosts_DATA = \
	img_hosting_providers.xml \
	Changelog

iconshosts_DATA = \
	icons/Imgur.png \
	icons/PixsUP_(png).png \
	icons/Freeimagehosting.png \
	icons/HostingPics.png \
	icons/ImageHosting.png \
	icons/ImageShack.png

toshosts_DATA = \
	tos/Imgur.txt \
	tos/PixsUP_(png).txt \
	tos/Freeimagehosting.txt \
	tos/HostingPics.txt \
	tos/ImageHosting.txt \
	tos/ImageShack.txt \
	tos/UploadScreenshot.txt

endif
